samples/_failures_safe/1761278760_b9c324_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79ca785f.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_79ca785f.c:157:9: error: expected expression at end of input
  157 |         *column += (
      |         ^
./samples/SAFE/__tmp_79ca785f.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_79ca785f.c:157:9: error: expected declaration or statement at end of input
